--- a/package.json
+++ b/package.json
@@ -3,22 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vite build",
+    "dev": "vite",
+    "watch": "vite build --watch"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@hennge/vue3-pagination": "^1.0.17",
+    "@inertiajs/inertia-vue3": "^0.6.0",
+    "@popperjs/core": "^2.11.8",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.3",
+    "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
+    "bootstrap-vue": "^2.23.1",
+    "mitt": "^3.0.1",
+    "register-service-worker": "^1.7.2",
+    "vue": "^3.3.4",
+    "vue-awesome-paginate": "^1.1.46",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.4",
+    "vuetify": "^3.3.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "axios": "^1.1.2",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "laravel-vite-plugin": "^0.7.5",
+    "sass": "^1.66.1",
+    "sass-loader": "^10.4.1",
+    "vite": "^4.0.0"
   },
   "eslintConfig": {
     "root": true,
