--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "watch": "vite build --watch"
+    "watch": "vite build --watch",
+    "preview": "vite preview" 
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -24,6 +25,7 @@
     "bootstrap-vue": "^2.23.1",
     "mitt": "^3.0.1",
     "register-service-worker": "^1.7.2",
+    "vite-plugin-pwa": "^0.16.5",
     "vue": "^3.3.4",
     "vue-awesome-paginate": "^1.1.46",
     "vue-axios": "^3.5.2",
