--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vite build",
     "dev": "vite",
     "watch": "vite build --watch",
-    "preview": "vite preview" 
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -24,21 +24,20 @@
     "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
     "mitt": "^3.0.1",
-    "register-service-worker": "^1.7.2",
     "vite-plugin-pwa": "^0.16.5",
     "vue": "^3.3.4",
     "vue-awesome-paginate": "^1.1.46",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.4",
     "vuetify": "^3.3.13",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "workbox-precaching": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "axios": "^1.1.2",
     "eslint": "^7.32.0",
