--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
+    "firebase": "^10.4.0",
     "mitt": "^3.0.1",
     "vite-plugin-pwa": "^0.16.5",
     "vue": "^3.3.4",
